--- a/countries/index.html
+++ b/countries/index.html
@@ -21,7 +21,7 @@
         <div id="tabCountries"></div>
       </div>
       <div class="favorite-list">
-        <h5>Countries (<span id="countFavorites"></span>)</h5>
+        <h5>Favorites (<span id="countFavorites"></span>)</h5>
         <h6>Total population: <span id="totalPopulationFavorites"></span></h6>
         <div id="tabFavorites"></div>
       </div>
